--- a/index.html
+++ b/index.html
@@ -12,7 +12,74 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage. This includes elements such as metadata, styles used, descriptions of the page and authors.</li>
+          <li>The body element represents the visible content shown to the user, including text and images.</li>
+          <li>The body element uses sections elements to separate information.</li>
+          <li>The body element uses section elements to separate and organise information.</li>
+          <li>Headings use h1 - h6, from most important to least important.
+          <li>Inside the body element (sections), You can list information using {li}</li>
+          <li>You can create numbered list elements inside {ol} and bullet points inside {ul} commands</li>
+          </li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>The head element contains information about the webpage. This includes elements such as metadata, styles used, descriptions of the page and authors.</li>
+          <li>The body element represents the visible content shown to the user, including text and images.</li>
+          <li>The body element uses sections elements to separate information.</li>
+          <li>The body element uses section elements to separate and organise information.</li>
+          <li>Headings use h1 - h6, from most important to least important.
+          <li>Inside the body element (sections), You can list information using {li}</li>
+          <li>You can create numbered list elements inside {ol} and bullet points inside {ul} commands</li>
+          </li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>GIT</h2>
+        <ul>
+          <li>The head element contains information about the webpage. This includes elements such as metadata, styles used, descriptions of the page and authors.</li>
+          <li>The body element represents the visible content shown to the user, including text and images.</li>
+          <li>The body element uses sections elements to separate information.</li>
+          <li>The body element uses section elements to separate and organise information.</li>
+          <li>Headings use h1 - h6, from most important to least important.
+          <li>Inside the body element (sections), You can list information using {li}</li>
+          <li>You can create numbered list elements inside {ol} and bullet points inside {ul} commands</li>
+          </li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JAVASCRIPT</h2>
+        <ul>
+          <li>The head element contains information about the webpage. This includes elements such as metadata, styles used, descriptions of the page and authors.</li>
+          <li>The body element represents the visible content shown to the user, including text and images.</li>
+          <li>The body element uses sections elements to separate information.</li>
+          <li>The body element uses section elements to separate and organise information.</li>
+          <li>Headings use h1 - h6, from most important to least important.
+          <li>Inside the body element (sections), You can list information using {li}</li>
+          <li>You can create numbered list elements inside {ol} and bullet points inside {ul} commands</li>
+          </li>
+        </ul>
+      </section>
+      <section class="card" id="command-line-section">
+        <h2>COMMAND LINE</h2>
+        <ul>
+          <li>The head element contains information about the webpage. This includes elements such as metadata, styles used, descriptions of the page and authors.</li>
+          <li>The body element represents the visible content shown to the user, including text and images.</li>
+          <li>The body element uses sections elements to separate information.</li>
+          <li>The body element uses section elements to separate and organise information.</li>
+          <li>Headings use h1 - h6, from most important to least important.
+          <li>Inside the body element (sections), You can list information using {li}</li>
+          <li>You can create numbered list elements inside {ol} and bullet points inside {ul} commands</li>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
