add random function to js

--- a/index.html
+++ b/index.html
@@ -154,6 +154,24 @@
           <li>An array is a function which enables more than one type of statement or piece of information to be stored ready for selection and further action. </li>
           <br>
           <li>To work with individual data within the array, we need to add a location by way of an index. </li>
+          <br>
+          <li>We can use a for loop to operate on each element in an array.</li>
+          <br>
+          <li>We can add functions using the function keyword</li>
+          <br>
+          <li>Functions are reusable blocks of code that contain instructions on how to perform a task.</li>
+          <br>
+          <li>Functions need to be named and be followed by parentheses.</li>
+          <br>
+          <li>We add curly brackets to contain the code for the task.</li>
+          <br>
+          <li>We can check our code is working using the console tab in a browser window.</li>
+          <br>
+          <li>Math.floor() and Math.random() can be used together to generate a random number.</li>
+          <br>
+          <li>To execute a function, we must call it in our code</li>
+          <br>
+          <li>ORDER MATTERS! - Javascript runs from top to bottom!</li>
         </ul>
         <br>
       </section>
