updated project README file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>Base</li>
             <li>Script</li>
           <br>
-          <li>The most basic parts of a pages structure are:</li>
+          <li>The most basic parts of a page structure are:</li>
           <br>
           <li> <b>Head</b> - The head element contains information about the webpage. This includes elements such as metadata (main language, performance, search criteria, viewing sizes (viewport), titles and character sets) and will usually not be seen by the audience. </li>
           <br>
